--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.anumalm.spellwork">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,6 +25,18 @@
             android:screenOrientation="portrait"></activity>
         <activity android:name=".SettingsActivity"
             android:screenOrientation="portrait"></activity>
+
+        <receiver android:process=":remote" android:name=".Alarm"></receiver>
+        <receiver android:name=".AutoStart">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+        </receiver>
+        <service
+            android:name=".AlarmService"
+            android:enabled="true"
+            android:process=":alarm_service" >
+        </service>
     </application>
 
 </manifest>
