AndroidManifest.xml: Set SplashActivity to be the main activity where app starts.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait" />
+
         <activity
             android:name=".WorkoutActivity"
             android:screenOrientation="portrait" />
@@ -42,8 +47,6 @@
             android:name=".AlarmService"
             android:enabled="true"
             android:process=":alarm_service" />
-
-        <activity android:name=".SplashActivity" />
 
         <service
             android:name=".services.MusicService"
